--- a/resources/sass/app.scss
+++ b/resources/sass/app.scss
@@ -6,3 +6,11 @@
 
 // Bootstrap
 @import 'bootstrap/scss/bootstrap';
+
+
+// @import "node_modules/select2/src/scss/core";
+// If you need to import Bootstrap as well:
+$s2bs5-border-color: $border-color;
+@import "node_modules/select2-bootstrap-5-theme/src/select2-bootstrap-5-theme";
+// Or if you have already imported Bootstrap:
+// @import "node_modules/select2-bootstrap-5-theme/src/include-all";
