--- a/public/css/styles.css
+++ b/public/css/styles.css
@@ -21,3 +21,8 @@
     display: flex; 
     flex-direction: column;
   }
+
+.bg-light-gray {
+    --bs-bg-opacity: 1;
+    background-color: #D3D3D3 !important;
+}
